// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Bullet Default 1`] = `
<div
  style="transform:scale(1);height:100vh"
>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-root"
    >
      <div
        class="makeStyles-methodBadge"
      >
        <span
          class="makeStyles-subtitle1"
        >
          POST
        </span>
      </div>
      <div
        class="makeStyles-url"
      >
        <span
          class="makeStyles-subtitle1"
        >
          http://localhost:3000/user
        </span>
      </div>
      <div
        class="makeStyles-filler"
      />
      <div
        class="makeStyles-statusBadge makeStyles-successStatusBadge"
      >
        <span
          class="makeStyles-subtitle1"
        >
          200
        </span>
      </div>
      <div
        class=""
        title="Uncollapse"
      >
        <img
          alt="Down carret"
          class="makeStyles-downCarretIcon "
          src="down_carret.svg"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height:0px"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Bullet Default with XML bodies 1`] = `
<div
  style="transform:scale(1);height:100vh"
>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-root"
    >
      <div
        class="makeStyles-methodBadge"
      >
        <span
          class="makeStyles-subtitle1"
        >
          POST
        </span>
      </div>
      <div
        class="makeStyles-url"
      >
        <span
          class="makeStyles-subtitle1"
        >
          http://localhost:3000/user
        </span>
      </div>
      <div
        class="makeStyles-filler"
      />
      <div
        class="makeStyles-statusBadge makeStyles-successStatusBadge"
      >
        <span
          class="makeStyles-subtitle1"
        >
          200
        </span>
      </div>
      <div
        class=""
        title="Uncollapse"
      >
        <img
          alt="Down carret"
          class="makeStyles-downCarretIcon "
          src="down_carret.svg"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height:0px"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Bullet Minimal 1`] = `
<div
  style="transform:scale(1);height:100vh"
>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-root"
    >
      <div
        class="makeStyles-methodBadge"
      >
        <span
          class="makeStyles-subtitle1"
        >
          POST
        </span>
      </div>
      <div
        class="makeStyles-url"
      >
        <span
          class="makeStyles-subtitle1"
        >
          http://localhost:3000/user
        </span>
      </div>
      <div
        class="makeStyles-filler"
      />
      <div
        class=""
        title="Uncollapse"
      >
        <img
          alt="Down carret"
          class="makeStyles-downCarretIcon "
          src="down_carret.svg"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height:0px"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Bullet iPhone 5/SE - vertical 1`] = `
<div
  style="transform:scale(1);height:100vh"
>
  <div
    class="makeStyles-root"
  >
    <div
      class="makeStyles-root"
    >
      <div
        class="makeStyles-methodBadge"
      >
        <span
          class="makeStyles-subtitle1"
        >
          POST
        </span>
      </div>
      <div
        class="makeStyles-url"
      >
        <span
          class="makeStyles-subtitle1"
        >
          http://localhost:3000/user
        </span>
      </div>
      <div
        class="makeStyles-filler"
      />
      <div
        class="makeStyles-statusBadge makeStyles-successStatusBadge"
      >
        <span
          class="makeStyles-subtitle1"
        >
          200
        </span>
      </div>
      <div
        class=""
        title="Uncollapse"
      >
        <img
          alt="Down carret"
          class="makeStyles-downCarretIcon "
          src="down_carret.svg"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-container MuiCollapse-hidden"
      style="min-height:0px"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        />
      </div>
    </div>
  </div>
</div>
`;
